src/app.scss
$voice-height: 90px;

#container {
  margin-bottom: $voice-height;
}

ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

li {
  margin: 0;
}

body {
  font-family: system-ui, Helvetica, sans-serif;
}

* {
  box-sizing: border-box;
}

h2 {
  font-size: 18px;
  margin: 0;
}

.item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  font-size: 18px;
  line-height: 3;

  border-bottom: 1px solid #cacaca;
  &:last-child {
    border-bottom: 0;
  }
}

.item--completed {
  color: #cacaca;
}

.item--current {
  background: #eaeaea;
}

.item__check {
  margin-right: 8px;
  margin-left: 0px;
}

.item__challenge {
}

.item__response {
  font-weight: 500;
}

.section {
  border-bottom: 0;

  &:last-child {
    border-bottom: 1px solid #cacaca;
  }

  display: none;
}

.section__header {
  cursor: pointer;
  padding: 12px 8px 8px 8px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.section__body {
  padding: 0 8px;
}

.section--selected {
  display: block;
}

.btn {
  border: 0;
  background-color: #1c4f6d;
  border-radius: 3px;
  padding: 12px 16px;
  color: white;
  cursor: pointer;
  margin-right: 8px;
  font-weight: 600;
  font-size: 16px;

  &:hover {
    filter: brightness(0.8);
  }

  &:last-child {
    margin-right: 0px;
  }
}

.btn--major {
  font-size: 20px;
}

.btn--green {
  background-color: #1d6d1c;
}

.btn[disabled] {
  background-color: #aaaaaa;
  color: white;
  cursor: not-allowed;

  &:hover {
    filter: brightness(1);
  }
}

.voice {
  position: fixed;
  bottom: 0;
  left: 0;
  height: $voice-height;
  width: 100%;
  display: flex;
  align-items: center;
  padding: 12px 8px;
  justify-content: space-between;

  z-index: 999;

  border-top: 1px solid #cacaca;

  background-color: white;
}

.voice__delay {
  display: flex;
  align-items: center;
  padding: 12px 0;

  label {
    margin-right: 8px;
  }
}

.menu {
  > ul {
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.3s linear;
  }
}

.menu--expanded {
  > ul {
    max-height: 1000px;
  }
}

.menu__toggle {
  margin-bottom: 8px;
  &:after {
    content: '☰';
  }
}

.menu__toggle--dropdown {
  &:after {
    margin-left: 12px;
    content: '▼';
  }
}

.menu__toggle--dropdown--expanded {
  &:after {
    margin-left: 12px;
    content: '▲';
  }
}

.menu__head {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 8px;
}

.menu__item {
  padding: 12px 0;

  border-bottom: 1px solid #cacaca;
  &:last-child {
    border-bottom: 0;
  }
}

.menu__item--selected {
  background: #eaeaea;
  filter: brightness(0.7);
}

@mixin dark-theme {
  color: #fff;
  background: #000;

  .menu__item--selected {
    background: #333;
  }

  .item--current {
    background: #333;
  }

  .checklist {
    filter: brightness(0.7);
  }

  .voice {
    background-color: black;
    filter: brightness(0.7);
  }

  a {
    color: white;
  }
}

.dark-theme {
  @include dark-theme;
}

@media (prefers-color-scheme: dark) {
  body:not(.light-theme) {
    @include dark-theme;
  }
}

.mode-selector {
  display: grid;
  grid-template-columns: 1fr 1fr;

  &__item {
    text-align: center;
    padding: 40px;
    margin: 12px;
    border: 1px solid gray;
  }
}

